--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harian Noesantara | Breaking News</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link rel="shortcut icon" href="logo n.ico" type="image/x-icon" />
   </head>
   <body>
@@ -31,7 +30,23 @@
         <span class="fa fa-times" id="times"></span>
       </label>
     </nav>
-    <section></section>
+
+      <header>
+        <h1>HEADLINE HARI INI</h1>
+    </header>
+    <main>
+        <section class="headline">
+            <!-- Headline content goes here -->
+        </section>
+        <aside class="popular-topics">
+            <h2>TOPIK POPULER</h2>
+            <!-- Topics list goes here -->
+        </aside>
+        <section class="other-headlines">
+            <h2>BERITA UTAMA LAINNYA</h2>
+            <!-- Other headlines go here -->
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>
@@ -89,4 +104,6 @@
       <p class="copyright">Copyright 2020-2023 Harian Noesantara Inc.</p>
     </footer>
   </body>
+
+  <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
 </html>
