--- a/index.html
+++ b/index.html
@@ -35,16 +35,27 @@
         <h1>HEADLINE HARI INI</h1>
     </header>
     <main>
-        <section class="headline">
+        <section class="headline flex" >
             <!-- Headline content goes here -->
-        </section>
-        <aside class="popular-topics">
+
+            <div class="bg-grey headline">
+
+            </div>
+
+           <div class="topik-populer">
             <h2>TOPIK POPULER</h2>
-            <!-- Topics list goes here -->
-        </aside>
+           </div>
+        </section>
+       
         <section class="other-headlines">
             <h2>BERITA UTAMA LAINNYA</h2>
             <!-- Other headlines go here -->
+            <div class="grid-container">
+              <div>1</div>
+              <div>2</div>
+              <div>3</div>  
+              <div>4</div>
+            </div>
         </section>
     </main>
 
