memperbaiki struktur folder

--- a/about us.html
+++ b/about us.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harian Noesantara | Breaking News</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
-    <link rel="shortcut icon" href="logo n.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/logo n.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Navbar -->
     <input type="checkbox" id="check" />
     <nav>
       <div class="icon">
-        <img src="./logo.png" width="280px" />
+        <img src="assets/logo.png" width="280px" />
       </div>
       <div class="search_box">
         <input type="search" placeholder="Cari berita..." />
@@ -70,7 +70,7 @@
             href="https://linkedin.com/in/algi-chandra-aulia-b361b0222/"
             target="_blank"
           >
-            <img src="algi.png" width="159px" height="225px" />
+            <img src="assets/algi.png" width="159px" height="225px" />
             <div class="content">
               <h4>Algi Chandra A.</h4>
               <p>Project Leader</p>
@@ -80,7 +80,7 @@
 
         <article>
           <a href="https://www.linkedin.com/in/senjagumilang/" target="_blank">
-            <img src="senja.png" width="159px" height="225px" />
+            <img src="assets/senja.png" width="159px" height="225px" />
             <div class="content">
               <h4>Senja Gumilang</h4>
               <p>Front-End</p>
@@ -93,7 +93,7 @@
             href="https://linkedin.com/in/fidelia-maria-christina-lake-59aa81216/"
             target="_blank"
           >
-            <img src="fidelia.png" width="159px" height="225px" />
+            <img src="assets/fidelia.png" width="159px" height="225px" />
             <div class="content">
               <h4>Fidelia Maria C. L.</h4>
               <p>Front-End</p>
@@ -106,7 +106,7 @@
             href="https://linkedin.com/in/ahza-pratama-2a1635222/"
             target="_blank"
           >
-            <img src="ahza.png" width="159px" height="225px" />
+            <img src="assets/ahza.png" width="159px" height="225px" />
             <div class="content">
               <h4>Ahza Pratama</h4>
               <p>Back-End</p>
@@ -116,7 +116,7 @@
 
         <article>
           <a href="https://linkedin.com/in/pingkanrezasiahaan/" target="_blank">
-            <img src="pingkan.png" width="159px" height="225px" />
+            <img src="assets/pingkan.png" width="159px" height="225px" />
             <div class="content">
               <h4>Pingkan Reza S.</h4>
               <p>Back-End</p>
@@ -126,7 +126,7 @@
 
         <article>
           <a href="https://linkedin.com/in/rinimae/" target="blank">
-            <img src="mae.png" width="159px" height="225px" />
+            <img src="assets/mae.png" width="159px" height="225px" />
             <div class="content">
               <h4>Rini Mae Lestari</h4>
               <p>Quality Assurance</p>
@@ -140,7 +140,7 @@
     <footer>
       <div class="row">
         <div class="col">
-          <img src="logo.png" class="logo" />
+          <img src="assets/logo.png" class="logo" />
           <p>
             Terus dukung Harian Noesantara sebagai media penyaji informasi masa
             kini di Indonesia.
