--- a/bisnis.html
+++ b/bisnis.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harian Noesantara | Breaking News</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
-    <link rel="shortcut icon" href="logo n.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/logo n.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Navbar -->
     <input type="checkbox" id="check" />
     <nav>
       <div class="icon">
-        <img src="./logo.png" width="280px" />
+        <img src="assets/logo.png" width="280px" />
       </div>
       <div class="search_box">
         <input type="search" placeholder="Cari berita..." />
@@ -41,7 +41,7 @@
             href="https://www.liputan6.com/bisnis/read/5459065/ump-jawa-barat-2024-naik-357-persen-jadi-rp-2057495"
             target=""
           >
-            <img src="1-bisnis.png" width="337px" height="190px" />
+            <img src="assets/1-bisnis.png" width="337px" height="190px" />
             <div class="content">
               <h4>UMP Jawa Barat 2024 Naik 3,57 Persen, Jadi Rp 2.057.495</h4>
               <p>Bisnis</p>
@@ -54,7 +54,7 @@
             href="https://www.liputan6.com/bisnis/read/5459313/ump-lampung-2024-sentuh-rp-2716497-naik-316-persen"
             target=""
           >
-            <img src="2-bisnis.png" width="337px" height="190px" />
+            <img src="assets/2-bisnis.png" width="337px" height="190px" />
             <div class="content">
               <h4>UMP Lampung 2024 Sentuh Rp 2.716.497, Naik 3,16 Persen</h4>
               <p>Bisnis</p>
@@ -67,7 +67,7 @@
             href="https://www.liputan6.com/bisnis/read/5459157/pekerja-yang-berhak-dapat-gaji-di-atas-ump-siapa-saja"
             target=""
           >
-            <img src="3-bisnis.png" width="337px" height="190px" />
+            <img src="assets/3-bisnis.png" width="337px" height="190px" />
             <div class="content">
               <h4>Pekerja yang Berhak Dapat Gaji di Atas UMP, Siapa Saja?</h4>
               <p>Bisnis</p>
@@ -80,7 +80,7 @@
             href="https://www.liputan6.com/bisnis/read/5459152/sulawesi-tenggara-tetapkan-ump-2024-naik-jadi-rp-2885964"
             target=""
           >
-            <img src="4-bisnis.png" width="337px" height="190px" />
+            <img src="assets/4-bisnis.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Sulawesi Tenggara Tetapkan UMP 2024 Naik Jadi Rp 2.885.964
@@ -95,7 +95,7 @@
             href="https://www.liputan6.com/bisnis/read/5459123/kawasan-industri-batang-dapat-investasi-rp-900-miliar-dari-perusahaan-china"
             target=""
           >
-            <img src="5-bisnis.png" width="337px" height="190px" />
+            <img src="assets/5-bisnis.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Kawasan Industri Batang Dapat Investasi Rp 900 Miliar dari
@@ -111,7 +111,7 @@
             href="https://www.liputan6.com/bisnis/read/5459110/pengusaha-tak-patuh-bayar-ump-2024-siap-siap-dicabut-izin-usahanya"
             target=""
           >
-            <img src="6-bisnis.png" width="337px" height="190px" />
+            <img src="assets/6-bisnis.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Pengusaha Tak Patuh Bayar UMP 2024, Siap-Siap Dicabut Izin
@@ -127,7 +127,7 @@
             href="https://www.liputan6.com/bisnis/read/5459003/mendag-bujuk-pengusaha-as-investasi-di-ikn-nusantara"
             target=""
           >
-            <img src="7-bisnis.png" width="337px" height="190px" />
+            <img src="assets/7-bisnis.png" width="337px" height="190px" />
             <div class="content">
               <h4>Mendag Bujuk Pengusaha AS Investasi di IKN Nusantara</h4>
               <p>Bisnis</p>
