--- a/careers.html
+++ b/careers.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harian Noesantara | Breaking News</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
-    <link rel="shortcut icon" href="logo n.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/logo n.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Navbar -->
     <input type="checkbox" id="check" />
     <nav>
       <div class="icon">
-        <img src="./logo.png" width="280px" />
+        <img src="assets/logo.png" width="280px" />
       </div>
       <div class="search_box">
         <input type="search" placeholder="Cari berita..." />
@@ -84,7 +84,7 @@
     <footer>
       <div class="row">
         <div class="col">
-          <img src="logo.png" class="logo" />
+          <img src="assets/logo.png" class="logo" />
           <p>
             Terus dukung Harian Noesantara sebagai media penyaji informasi masa
             kini di Indonesia.
