--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harian Noesantara | Breaking News</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
-    <link rel="shortcut icon" href="logo n.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/logo n.ico" type="image/x-icon" />
     <script src="./js/script.js"></script>
   </head>
   <body>
@@ -14,7 +14,7 @@
     <input type="checkbox" id="check" />
     <nav>
       <div class="icon">
-        <img src="./logo.png" width="280px" />
+        <img src="assets/logo.png" width="280px" />
       </div>
       <div class="search_box">
         <input type="search" placeholder="Cari berita..." />
@@ -38,7 +38,7 @@
     <!-- Content Home -->
     <div class="wrapper">
       <section id="home">
-        <img src="./assets/reporter.png" />
+        <img src="assets/reporter.png" />
         <div class="kolom">
           <h1>Jernih Memandang Dunia</h1>
           <p class="deskripsi">
@@ -61,7 +61,7 @@
             href="https://www.liputan6.com/bola/read/5458503/jonatan-christie-mundur-dari-china-masters-2023"
             target=""
           >
-            <img src="./assets/1-olahraga.png" width="337px" height="190px" />
+            <img src="assets/1-olahraga.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Tunggal putra Indonesia Jonatan Christie mundur dari China
@@ -77,7 +77,7 @@
             href="https://www.liputan6.com/pemilu/read/5458666/ganjar-pranowo-bakal-terapkan-program-sekolah-gratis-jateng-jadi-nasional"
             target=""
           >
-            <img src="4-politik.png" width="337px" height="190px" />
+            <img src="assets/4-politik.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Ganjar Pranowo Bakal Terapkan Program Sekolah Gratis Jateng Jadi
@@ -93,7 +93,7 @@
             href="https://www.liputan6.com/bisnis/read/5459123/kawasan-industri-batang-dapat-investasi-rp-900-miliar-dari-perusahaan-china"
             target=""
           >
-            <img src="5-bisnis.png" width="337px" height="190px" />
+            <img src="assets/5-bisnis.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Kawasan Industri Batang Dapat Investasi Rp 900 Miliar dari
@@ -110,7 +110,7 @@
     <footer>
       <div class="row">
         <div class="col">
-          <img src="logo.png" class="logo" />
+          <img src="assets/logo.png" class="logo" />
           <p>
             Terus dukung Harian Noesantara sebagai media penyaji informasi masa
             kini di Indonesia.
