--- a/kesehatan.html
+++ b/kesehatan.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harian Noesantara | Breaking News</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
-    <link rel="shortcut icon" href="logo n.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/logo n.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Navbar -->
     <input type="checkbox" id="check" />
     <nav>
       <div class="icon">
-        <img src="./logo.png" width="280px" />
+        <img src="assets/logo.png" width="280px" />
       </div>
       <div class="search_box">
         <input type="search" placeholder="Cari berita..." />
@@ -41,7 +41,7 @@
             href="https://www.liputan6.com/health/read/5459224/5-kebiasaan-di-malam-hari-yang-tanpa-disadari-merusak-rambut"
             target=""
           >
-            <img src="1-kesehatan.png" width="337px" height="190px" />
+            <img src="assets/1-kesehatan.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 5 Kebiasaan di Malam Hari yang Tanpa Disadari Merusak Rambut
@@ -56,7 +56,7 @@
             href="https://www.liputan6.com/health/read/5459329/tips-dokter-paru-cara-cegah-agar-tak-terjangkit-ispa-di-musim-pancaroba"
             target=""
           >
-            <img src="2-kesehatan.png" width="337px" height="190px" />
+            <img src="assets/2-kesehatan.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Tips Dokter Paru, Cara Cegah Agar Tak Terjangkit ISPA di Musim
@@ -72,7 +72,7 @@
             href="https://www.liputan6.com/health/read/5452244/begini-cara-cegah-5-penyakit-penyebab-kematian-tertinggi-di-indonesia"
             target=""
           >
-            <img src="3-kesehatan.png" width="337px" height="190px" />
+            <img src="assets/3-kesehatan.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Begini Cara Cegah 5 Penyakit Penyebab Kematian Tertinggi di
@@ -88,7 +88,7 @@
             href="https://www.liputan6.com/health/read/5458616/butuh-dekade-untuk-lihat-dampak-rokok-elektrik-tapi-ahli-khawatirkan-hal-ini"
             target=""
           >
-            <img src="4-kesehatan.png" width="337px" height="190px" />
+            <img src="assets/4-kesehatan.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Butuh Dekade untuk Lihat Dampak Rokok Elektrik tapi Ahli
@@ -104,7 +104,7 @@
             href="https://www.liputan6.com/health/read/5458803/12-fakta-unik-kucing-bisa-kidal-dan-lebih-panjang-umur-dari-anjing"
             target=""
           >
-            <img src="5-kesehatan.png" width="337px" height="190px" />
+            <img src="assets/5-kesehatan.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 12 Fakta Unik Kucing: Bisa Kidal dan Lebih Panjang Umur dari
@@ -120,7 +120,7 @@
             href="https://www.liputan6.com/health/read/5458608/pasien-diabetes-tetap-aman-makan-di-luar-dengan-4-strategi-ini"
             target=""
           >
-            <img src="6-kesehatan.png" width="337px" height="190px" />
+            <img src="assets/6-kesehatan.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Pasien Diabetes Tetap Aman Makan di Luar dengan 4 Strategi Ini
@@ -135,7 +135,7 @@
             href="https://www.liputan6.com/health/read/5458252/peneliti-nyamuk-wolbachia-bukan-rekayasa-genetik-apalagi-nyamuk-bionik"
             target=""
           >
-            <img src="7-kesehatan.png" width="337px" height="190px" />
+            <img src="assets/7-kesehatan.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Peneliti: Nyamuk Wolbachia Bukan Rekayasa Genetik Apalagi Nyamuk
@@ -152,7 +152,7 @@
     <footer>
       <div class="row">
         <div class="col">
-          <img src="logo.png" class="logo" />
+          <img src="assets/logo.png" class="logo" />
           <p>
             Terus dukung Harian Noesantara sebagai media penyaji informasi masa
             kini di Indonesia.
