--- a/olahraga.html
+++ b/olahraga.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harian Noesantara | Breaking News</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
-    <link rel="shortcut icon" href="logo n.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/logo n.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Navbar -->
     <input type="checkbox" id="check" />
     <nav>
       <div class="icon">
-        <img src="./logo.png" width="280px" />
+        <img src="assets/logo.png" width="280px" />
       </div>
       <div class="search_box">
         <input type="search" placeholder="Cari berita..." />
@@ -41,7 +41,7 @@
             href="https://www.liputan6.com/bola/read/5458503/jonatan-christie-mundur-dari-china-masters-2023"
             target=""
           >
-            <img src="1-olahraga.png" width="337px" height="190px" />
+            <img src="assets/1-olahraga.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Tunggal putra Indonesia Jonatan Christie mundur dari China
@@ -57,7 +57,7 @@
             href="https://www.liputan6.com/bola/read/5458743/tantang-filipina-di-kualifikasi-piala-dunia-2026-shin-tae-yong-sebut-timnas-indonesia-punya-satu-kerugian"
             target=""
           >
-            <img src="2-olahraga.png" width="337px" height="190px" />
+            <img src="assets/2-olahraga.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Tantang Filipina di Kualifikasi Pildun 2026, STY Sebut Indonesia
@@ -73,7 +73,7 @@
             href="https://www.liputan6.com/bola/read/5458146/pelatih-brasil-phelipe-leal-belajar-bahasa-indonesia-di-piala-dunia-u-17-2023"
             target=""
           >
-            <img src="3-olahraga.png" width="337px" height="190px" />
+            <img src="assets/3-olahraga.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Pelatih Brasil, Phelipe Leal Belajar Bahasa Indonesia di Piala
@@ -89,7 +89,7 @@
             href="https://www.liputan6.com/bola/read/5458931/filipina-vs-timnas-indonesia-di-kualifikasi-piala-dunia-2026-rafael-struick-fokus-raih-3-poin"
             target=""
           >
-            <img src="4-olahraga.png" width="337px" height="190px" />
+            <img src="assets/4-olahraga.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Filipina vs Timnas Indonesia di Kualifikasi Pildun 2026, Rafael
@@ -105,7 +105,7 @@
             href="https://www.liputan6.com/bola/read/5436130/gokil-liga-pelajar-dbl-jadi-kompetisi-olahraga-nasional-pertama-yang-pakai-indonesia-arena?page=3"
             target=""
           >
-            <img src="5-olahraga.png" width="337px" height="190px" />
+            <img src="assets/5-olahraga.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Liga DBL Jadi Olahraga Nasional Pertama yang Pakai Indonesia
@@ -121,7 +121,7 @@
             href="https://www.liputan6.com/bola/read/5422062/anak-muda-jakarta-demam-bola-basket-peserta-dbl-2023-jaksel-meroket-23-persen"
             target=""
           >
-            <img src="6-olahraga.png" width="337px" height="190px" />
+            <img src="assets/6-olahraga.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Anak Muda Jakarta Demam Bola Basket, Peserta DBL 2023 Jaksel
@@ -137,7 +137,7 @@
             href="https://www.liputan6.com/bola/read/5447818/phoenix-loloskan-2-wakil-ke-indonesia-arena-pada-final-dbl-jakarta-2023"
             target=""
           >
-            <img src="7-olahraga.png" width="337px" height="190px" />
+            <img src="assets/7-olahraga.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Phoenix Loloskan 2 Wakil ke Indonesia Arena pada Final DBL
@@ -154,7 +154,7 @@
     <footer>
       <div class="row">
         <div class="col">
-          <img src="logo.png" class="logo" />
+          <img src="assets/logo.png" class="logo" />
           <p>
             Terus dukung Harian Noesantara sebagai media penyaji informasi masa
             kini di Indonesia.
