--- a/politik.html
+++ b/politik.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harian Noesantara | Breaking News</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
-    <link rel="shortcut icon" href="logo n.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/logo n.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Navbar -->
     <input type="checkbox" id="check" />
     <nav>
       <div class="icon">
-        <img src="./logo.png" width="280px" />
+        <img src="assets/logo.png" width="280px" />
       </div>
       <div class="search_box">
         <input type="search" placeholder="Cari berita..." />
@@ -41,7 +41,7 @@
             href="https://www.liputan6.com/pemilu/read/5459086/elektabilitas-prabowo-gibran-terus-naik-tkn-bukti-rakyat-ingin-pemilu-riang-gembira"
             target=""
           >
-            <img src="1-politik.png" width="337px" height="190px" />
+            <img src="assets/1-politik.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Elektabilitas Prabowo-Gibran Terus Naik, TKN: Bukti Rakyat Ingin
@@ -57,7 +57,7 @@
             href="https://www.liputan6.com/pemilu/read/5459088/prabowo-presiden-ke-6-dan-presiden-ke-7-mendukung-berada-di-sebelah-saya"
             target=""
           >
-            <img src="2-politik.png" width="337px" height="190px" />
+            <img src="assets/2-politik.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Prabowo: Presiden ke-6 dan Presiden ke-7 Mendukung, Berada di
@@ -73,7 +73,7 @@
             href="https://www.liputan6.com/pemilu/read/5459036/partai-gelora-siapkan-70-pengacara-antisipasi-kecurangan-pemilu-2024"
             target=""
           >
-            <img src="3-politik.png" width="337px" height="190px" />
+            <img src="assets/3-politik.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Partai Gelora Siapkan 70 Pengacara, Antisipasi Kecurangan Pemilu
@@ -89,7 +89,7 @@
             href="https://www.liputan6.com/pemilu/read/5458666/ganjar-pranowo-bakal-terapkan-program-sekolah-gratis-jateng-jadi-nasional"
             target=""
           >
-            <img src="4-politik.png" width="337px" height="190px" />
+            <img src="assets/4-politik.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Ganjar Pranowo Bakal Terapkan Program Sekolah Gratis Jateng Jadi
@@ -105,7 +105,7 @@
             href="https://www.liputan6.com/pemilu/read/5458692/tkn-program-air-bersih-capres-prabowo-antarkan-masyarakat-indonesia-maju"
             target=""
           >
-            <img src="5-politik.png" width="337px" height="190px" />
+            <img src="assets/5-politik.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 TKN: Program Air Bersih Capres Prabowo Antarkan Masyarakat
@@ -121,7 +121,7 @@
             href="https://www.liputan6.com/pemilu/read/5458652/ganjar-sambangi-pulau-mansinam-tempat-bersejarah-di-papua"
             target=""
           >
-            <img src="6-politik.png" width="337px" height="190px" />
+            <img src="assets/6-politik.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Ganjar Sambangi Pulau Mansinam, Tempat Bersejarah di Papua
@@ -136,7 +136,7 @@
             href="https://www.liputan6.com/pemilu/read/5458461/sby-kenang-saat-menjadi-prajurit-tni-bersama-prabowo-subianto"
             target=""
           >
-            <img src="7-politik.png" width="337px" height="190px" />
+            <img src="assets/7-politik.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 SBY Kenang Saat Menjadi Prajurit TNI Bersama Prabowo Subianto
@@ -152,7 +152,7 @@
     <footer>
       <div class="row">
         <div class="col">
-          <img src="logo.png" class="logo" />
+          <img src="assets/logo.png" class="logo" />
           <p>
             Terus dukung Harian Noesantara sebagai media penyaji informasi masa
             kini di Indonesia.
