--- a/teknologi.html
+++ b/teknologi.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harian Noesantara | Breaking News</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
-    <link rel="shortcut icon" href="logo n.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/logo n.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Navbar -->
     <input type="checkbox" id="check" />
     <nav>
       <div class="icon">
-        <img src="./logo.png" width="280px" />
+        <img src="assets/logo.png" width="280px" />
       </div>
       <div class="search_box">
         <input type="search" placeholder="Cari berita..." />
@@ -38,7 +38,7 @@
       <main class="grid-berita">
         <article>
           <a href="https://www.liputan6.com/tekno/read/5459256/target-synology-dominasi-pasar-data-storage-di-indonesia-sasar-semua-skala-kebutuhan" target="">
-            <img src="1-teknologi.png" width="337px" height="190px" />
+            <img src="assets/1-teknologi.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Target Synology Dominasi Pasar Data Storage di Indonesia, Sasar Semua Skala
@@ -50,7 +50,7 @@
 
         <article>
           <a href="https://www.liputan6.com/tekno/read/5458796/ceo-microsoft-openai-perlu-ubah-tata-kelola-usai-sam-altman-dipecat" target="">
-            <img src="2-teknologi.png" width="337px" height="190px" />
+            <img src="assets/2-teknologi.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 CEO Microsoft: OpenAI Perlu Ubah Tata Kelola Usai Sam Altman Dipecat
@@ -62,7 +62,7 @@
 
         <article>
           <a href="https://www.liputan6.com/tekno/read/5458751/top-3-tekno-pengiklan-ramai-ramai-tinggalkan-x-twitter-jadi-sorotan" target="">
-            <img src="3-teknologi.png" width="337px" height="190px" />
+            <img src="assets/3-teknologi.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Top 3 Tekno: Pengiklan Ramai-Ramai Tinggalkan X Twitter Jadi Sorotan
@@ -74,7 +74,7 @@
 
         <article>
           <a href="https://www.liputan6.com/tekno/read/5458433/oppo-pad-2-rilis-di-indonesia-ini-harga-dan-spesifikasinya" target="">
-            <img src="4-teknologi.png" width="337px" height="190px" />
+            <img src="assets/4-teknologi.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Oppo Pad 2 Rilis di Indonesia, Ini Harga dan Spesifikasinya
@@ -86,7 +86,7 @@
 
         <article>
           <a href="https://www.liputan6.com/tekno/read/5458329/sam-altman-jadi-kepala-tim-riset-ai-microsoft-setelah-dipecat-dari-openai" target="">
-            <img src="5-teknologi.png" width="337px" height="190px" />
+            <img src="assets/5-teknologi.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Sam Altman Jadi Kepala Tim Riset AI Microsoft, Setelah Dipecat dari OpenAI
@@ -98,7 +98,7 @@
 
         <article>
           <a href="https://www.liputan6.com/tekno/read/5457750/meta-bubarkan-tim-responsible-ai-ingin-fokus-ke-pengembangan-kecerdasan-buatan" target="">
-            <img src="6-teknologi.png" width="337px" height="190px" />
+            <img src="assets/6-teknologi.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Meta Bubarkan Tim Responsible AI, Fokus ke Pengembangan Kecerdasan Buatan
@@ -110,7 +110,7 @@
 
         <article>
           <a href="https://www.liputan6.com/tekno/read/5455730/wamenkominfo-minta-masyarakat-waspadai-penyalahgunaan-deepfake" target="">
-            <img src="7-teknologi.png" width="337px" height="190px" />
+            <img src="assets/7-teknologi.png" width="337px" height="190px" />
             <div class="content">
               <h4>
                 Kerja Sama dengan ENOC, Pertamina Patra Niaga Perluas
@@ -127,7 +127,7 @@
     <footer>
       <div class="row">
         <div class="col">
-          <img src="logo.png" class="logo" />
+          <img src="assets/logo.png" class="logo" />
           <p>
             Terus dukung Harian Noesantara sebagai media penyaji informasi masa
             kini di Indonesia.
