--- a/editorial.html
+++ b/editorial.html
@@ -15,10 +15,10 @@
       <div class="icon">
         <img src="assets/logo.png" width="280px" />
       </div>
-      <div class="search_box">
+      <!-- <div class="search_box">
         <input type="search" placeholder="Cari berita..." />
         <span class="fa fa-search"></span>
-      </div>
+      </div> -->
       <ul>
         <li><a href="index.html">HOME</a></li>
         <li><a href="olahraga.html">OLAHRAGA</a></li>
